add response stream support